syntax = "proto3";

package getImageCode;

option go_package = "./proto;getImageCode";

service GetImageCode {
	rpc Call(CallRequest) returns (CallResponse) {}
	rpc ClientStream(stream ClientStreamRequest) returns (ClientStreamResponse) {}
	rpc ServerStream(ServerStreamRequest) returns (stream ServerStreamResponse) {}
	rpc BidiStream(stream BidiStreamRequest) returns (stream BidiStreamResponse) {}
}

message CallRequest {
	string uuid = 1;
}

message CallResponse {
	//错误码
	string Errno =1 ;
	//错误消息
	string Errmsg = 2;
	//图片结构信息
	bytes Pix = 3;

	//图片跨步
	int64 Stride =4 ;

	message  Point{
		int64 X =1;
		int64 Y =2;
	}

	// Min, Max Point
	Point Min =5;
	Point Max =6;
}

message ClientStreamRequest {
	int64 stroke = 1;
}

message ClientStreamResponse {
	int64 count = 1;
}

message ServerStreamRequest {
	int64 count = 1;
}

message ServerStreamResponse {
	int64 count = 1;
}

message BidiStreamRequest {
	int64 stroke = 1;
}

message BidiStreamResponse {
	int64 stroke = 1;
}
